--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,15 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+
     -->
-    <title>React App</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&amp;family=Satisfy&amp;display=swap" rel="stylesheet">
+
+    
+    <title>Sway Suites</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
