update home page

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,18 @@
     
     <title>Sway Suites</title>
   </head>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KN1RJJMPNZ"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+
+
+gtag('config', 'G-KN1RJJMPNZ');
+</script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
